fixed overlapping divs when viewing room

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -964,7 +964,7 @@ a {
 }
 
 .room__header {
-  max-height: 30vh;
+  max-height: 45vh;
   overflow-y: auto;
   position: absolute;
   width: 95%;
@@ -1011,6 +1011,10 @@ a {
   color: var(--color-main);
 }
 
+.room__info span {
+  padding-right: 1rem;
+}
+
 .room__hosted p {
   text-transform: uppercase;
   color: var(--color-gray);
@@ -1042,8 +1046,10 @@ a {
 }
 
 .room__conversation {
+  position: relative;
+  top: -2.5rem;
   margin-top: 1rem;
-  margin-bottom: 4rem;
+  margin-bottom: 0rem;
   height: 64%;
 }
 
@@ -1057,8 +1063,8 @@ a {
   background: var(--color-bg);
   border-radius: 0.7rem;
   overflow-y: auto;
-  height: 100%;
-  margin-top: 28vh;
+  height: 50%;
+  margin-top: 50vh;
   padding: 0 2rem 4rem 2rem;
 }
 
